--- a/api/package.json
+++ b/api/package.json
@@ -1,6 +1,10 @@
 {
   "name": "api",
   "version": "1.0.0",
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "express": "^5.1.0",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3"
+  }
 }
-
