--- a/package.json
+++ b/package.json
@@ -5,6 +5,6 @@
     "install:backend": "cd backend && npm install",
     "install:frontend": "cd frontend && npm install",
     "build:backend": "cd backend && npm install && npx prisma generate",
-    "vercel-build": "cd backend && npm install && npx prisma generate"
+    "vercel-build": "cd backend && npm install && npx prisma generate && cd ../api && npm install"
   }
 }
