--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "buildCommand": "cd backend && npm install && npx prisma generate",
+  "buildCommand": "cd backend && npm install && npx prisma generate && cd ../api && npm install",
   "builds": [
     {
       "src": "api/index.ts",
