--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,14 @@
 {
   "version": 2,
-  "buildCommand": "cd backend && npm install && npx prisma generate && cd ../api && npm install",
+  "buildCommand": "npm install && cd backend && npm install && npx prisma generate",
   "builds": [
     {
       "src": "api/index.ts",
       "use": "@vercel/node",
       "config": {
         "includeFiles": [
-          "backend/**"
+          "backend/**",
+          "node_modules/**"
         ],
         "maxLambdaSize": "50mb"
       }
