--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "express": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3"
+  },
+  "devDependencies": {
+    "@types/node": "^24.10.1"
   }
 }
