--- a/api/package.json
+++ b/api/package.json
@@ -1,6 +1,8 @@
 {
   "name": "api",
   "version": "1.0.0",
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "@types/node": "^24.10.1"
+  }
 }
-
