--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
     "@prisma/client": "^6.1.0",
     "bcrypt": "^6.0.0",
